@@ -621,8 +621,8 @@ The direct mode will be disabled if any of the following holds:
   race condition)
 * the unifier is enabled (the configuration setting *unify* is true)
 * a compiler option not supported by the direct mode is used:
-** a *-Wp,_X_* compiler option other than *-Wp,-MD,_path_* and
-   *-Wp,-MMD,_path_*
+** a *-Wp,_X_* compiler option other than *-Wp,-MD,_path_*,
+   *-Wp,-MMD,_path_* and *-Wp,-D_define_*
 ** *-Xpreprocessor*
 * the string ``\_\_TIME__'' is present in the source code
 
@@ -829,8 +829,8 @@ problems and what may be done to increase the hit rate:
 ** Compiler arguments that are hashed in the direct mode but not in the
    preprocessor mode have changed (*-I*, *-include*, *-D*, etc) and they didn't
    affect the preprocessor output.
-** The compiler option *-Xpreprocessor* or *-Wp,_X_* (except *-Wp,-MD,_path_*
-   and *Wp,-MMD,_path_*) is used.
+** The compiler option *-Xpreprocessor* or *-Wp,_X_* (except *-Wp,-MD,_path_*,
+   *-Wp,-MMD,_path_*, and *-Wp,-D_define_*) is used.
 ** This was the first compilation with a new value of the base directory
    setting.
 ** A modification time of one of the include files is too new (created the same
